# afgh-fed

./: Hash_Algo.py  Pixel_Algo.py  SIFT_Algo.py  plot.ipynb
pre/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compare_AFGH  compare_AFGH.cpp  main.cpp  main_accuracy.cpp  main_original.cpp  mvg_noise_via_affine_tx_HeartScale_Part1_Epsn12_round1.csv  mvg_noise_via_affine_tx_HeartScale_Part2_Epsn12_round1.csv  mvg_noise_via_affine_tx_HeartScale_Part3_Epsn12_round1.csv  pre-hom.c  pre-hom.h  pre-relic-udf.c  pre-relic-udf.h  res.txt  test.cpp  test.txt  test_relic_udf.cpp
pre/Federated_Learning/: DP_Gaussian.py  DP_Laplace.py  DP_MVG_Python.ipynb  LDP_Compression.py  LDP_Rappor.py  MVG.py  gen_MVG.py  gradient_reverse.py  main_fed.py  main_fed_no_enc.py  main_fed_no_noise.py  read_write.py  testing.py
pre/Federated_Learning/DataGenerated/BreastcancerScale/BreastcancerScale_round1/: mvg_noise_via_affine_tx_BreastcancerScale_Part1_Epsn10_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part1_Epsn11_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part1_Epsn12_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part2_Epsn10_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part2_Epsn11_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part2_Epsn12_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part3_Epsn10_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part3_Epsn11_round1.csv  mvg_noise_via_affine_tx_BreastcancerScale_Part3_Epsn12_round1.csv
pre/Federated_Learning/DataGenerated/BreastcancerScale/FinalResult/: BreastcancerScale_DP_MVG_FinalResult
pre/Federated_Learning/data/: LIBSVM.py
pre/Federated_Learning/models/: Fed.py  Nets.py  Update.py  Update_Bias.py  Update_Experiment.py  Update_MVG.py  test.py
pre/Federated_Learning/utils/: options.py  sampling.py
pre/clients_noises/: client0.txt  client1.txt  client2.txt  client3.txt  client4.txt  client5.txt  client6.txt  client7.txt  client8.txt  client9.txt  original_noises_sum.txt
